<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            

            <EditText
                android:id="@+id/_senderEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/senderphonenumber_hinttext"
                android:inputType="phone" >

                <requestFocus />
            </EditText>




            <ImageButton
                android:id="@+id/_senderPickButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher" />

        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="#FFFFFFFF" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/_smsRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="SMS" />

                <RadioButton
                    android:id="@+id/_missedCallRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Missed Call" />
            </RadioGroup>
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="#FFFFFFFF" />

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/_pinEditText"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/pinhinttext"
                android:inputType="textPassword" />

        </TableRow>
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="#FFFFFFFF" />

        <TableRow
            android:id="@+id/tableRowsendlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/_sendLocationCheckBox"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/sendlocationtext"
				 />

        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="#FFFFFFFF" />

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/_buttonBarLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/_saveButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="56dp"
                    android:text="@string/savebuttontext" />

                <Button
                    android:id="@+id/_cancelButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="14dp"
                    android:text="@string/cancelbuttontext" />

            </RelativeLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>